--- a/src/chess.tex
+++ b/src/chess.tex
@@ -37,6 +37,7 @@ leaving a lot of room for different combinations and play styles.";
 const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
 const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
 const SCREEN_TEXT_SIZE = 500;
+const PLAYBACK_SPEED = 200;
 
 % Constants
 % Accessing variables
@@ -86,6 +87,18 @@ var kingPos = [
     [-1, -1], % padding
     [0, 4]
 ];
+
+% PGN parsing
+% All input moves
+var movesToProcess = [];
+% The interval to keep applying moves
+var playInterval;
+% Save move state (show moves + the actual move)
+var processBool = true;
+% The move data after converting to internal representation
+var conversion = [];
+% Indicate whether there is a pawn to be promoted
+var promotionIndex = 0;
 
 % Game Data
 % The symbol array, each piece gets one symbol. Since the utf8 chess pieces do not work
@@ -329,236 +342,6 @@ function tooltip(on) {
 
         field.delay = false;
     }
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Process positional input %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-const PLAYBACK_SPEED = 200;
-var movesToProcess = [];
-var playInterval;
-
-var processBool = true;
-var conversion = [];
-var promotionIndex = 0;
-
-/**
- * Multiple PGN examples where used to validate the correctness of
- * the function. These can be found here:
- * https://en.wikipedia.org/wiki/Portable_Game_Notation
- */
-function processMoves() {
-    this.getField("info").setFocus();
-    if (checkmate || stalemate) {
-        printInfoText("Game over, please restart the game!");
-        return;
-    }
-
-    % Get the input string
-    var input = this.getField("moves").value;
-    % Remove comments from input
-    input = input.replace(/ *\{[^\}]*\}*/g, "");
-
-    var allTurns = input.split(/\s*\d+\.\s*|,\s*/);
-
-    movesToProcess = [];
-    for (var idx = 1; idx < allTurns.length; idx++) {
-        var parts = allTurns[idx].split(" ");
-        for (var j = 0; j < parts.length; j++) {
-            movesToProcess.push(parts[j]);
-        }
-    }
-
-    printInfoText("Start interval and move processing.");
-    playInterval = app.setInterval("processNextMove();", PLAYBACK_SPEED);
-}
-
-function processNextMove() {
-    if (movesToProcess.length == 0) {
-        printInfoText("All moves were processed.");
-        app.clearInterval(playInterval);
-        return;
-    }
-
-    if (processBool) {
-        conversion = convert(movesToProcess[0]);
-        if (conversion.length != 2) {
-            if (conversion.length == 1) {
-                printInfoText("Game over, " + conversion[0] + " won.");
-            } else {
-                printInfoText("Could not find a valid move for " + movesToProcess[0] + ".");
-            }
-            app.clearInterval(playInterval);
-            return;
-        }
-        move(conversion[0][M], conversion[0][N]);
-    } else {
-        move(conversion[1][M], conversion[1][N]);
-
-        if (promotionPos.length > 0) {
-            promotePawn(promotionIndex);
-        }
-
-        movesToProcess.splice(0, 1);
-    }
-
-    printInfoText("Moving: " + conversion[0] + " to " + conversion[1] +
-        ". Remaining: " + movesToProcess);
-    processBool = !processBool;
-}
-
-/**
- * This function is able to parse PGN notation.
- * These inputs can be processed:
- * - castles O-O and O-O-O
- * - pawn movements -> cb5
- * - other piece movements -> Nbd7
- * - pawn promotion -> e8=Q#
- * - result info -> 1/2-1/2, 0-1, 1-0
- * These move information are ignored by removing the symbols:
- * - captures -> x
- * - check -> +
- * - checkmate -> #
- * - moveinfo -> ! and ?
- *
- * Using the PGN notation the input is converted into the local coordinate system
- * with m and n coordinates for the target and the source.
- *
- * @param {Array} curTurn A single turn of the input that shall be converted.
- * @return {Array} The converted position in form of src and tgt position.
- */
-function convert(curTurn) {
-    var result = [];
-    var piece = "P";
-
-    var tgtM = -1;
-    var tgtN = -1;
-    var srcM = -1;
-    var srcN = -1;
-
-    % Delete all additional symbols that are not necessary to move the piece
-    var turnClean = curTurn.replace(/x|\+|#|!|\?/g, "");
-
-    % Game over, white won
-    if (turnClean == "1-0") {
-        checkmate = true;
-        return ["White"];
-    }
-    % Game over, black won
-    else if (turnClean == "0-1") {
-        checkmate = true;
-        return ["Black"];
-    }
-    % Game over, noone won
-    else if (turnClean == "1\/2-1\/2") {
-        stalemate = true;
-        return ["No one"];
-    }
-    % King side castles
-    else if (turnClean == "O-O") {
-        tgtM = currentTurn == WHITE ? 7 : 0;
-        tgtN = 6;
-        piece = "K";
-    }
-    % Queen side castles
-    else if (turnClean == "O-O-O") {
-        tgtM = currentTurn == WHITE ? 7 : 0;
-        tgtN = 2;
-        piece = "K";
-    } else {
-        var characters = turnClean.split("");
-        % Get the piece that should be moved
-        if (characters.length == 2) {
-            % piece = "P";
-        } else if (characters[0].charCodeAt(0) - 90 > 0) {
-            % piece = "P";
-            % Pawn promotion
-            if (characters[characters.length - 2] == "=") {
-                var promotionChar = characters[characters.length - 1];
-                if (promotionChar == "Q") {
-                    promotionIndex = 0;
-                } else if (promotionChar == "B") {
-                    promotionIndex = 1;
-                } else if (promotionChar == "N") {
-                    promotionIndex = 2;
-                } else {
-                    promotionIndex = 3;
-                }
-                characters.splice(characters.length - 2);
-            }
-        } else {
-            piece = characters[0];
-            characters.splice(0, 1);
-        }
-
-        % Get the target position
-        var tgtM = 8 - parseInt(characters[characters.length - 1], 10);
-        var tgtN = characters[characters.length - 2].charCodeAt(0) - 97;
-
-        % Check if there are additional movement information
-        for (var charPos = 0; charPos <= characters.length - 3; charPos++) {
-            var column = characters[charPos].charCodeAt(0) - 97;
-            if (column >= 0) {
-                srcN = column;
-            } else {
-                srcM = 8 - parseInt(characters[charPos], 10);
-            }
-        }
-    }
-
-    % Only allow letters a-h and only numbers from 1-8
-    if (tgtM < 0 || tgtN < 0 || tgtM >= FIELD_HEIGHT || tgtN >= FIELD_WIDTH ||
-        srcM >= FIELD_HEIGHT || srcN >= FIELD_WIDTH
-    ) {
-        return [];
-    }
-
-    var srcPos = getSourcePosition(tgtM, tgtN, srcM, srcN, piece);
-    if (srcPos.length != 2) {
-        return [];
-    } else {
-        result.push(srcPos);
-        result.push([tgtM, tgtN]);
-    }
-
-    return result;
-}
-
-function getSourcePosition(tgtM, tgtN, srcM, srcN, piece) {
-    for (var m = 0; m < FIELD_HEIGHT; m++) {
-        % If a row is given only check this one row
-        if (srcM > -1 && m != srcM) {
-            continue;
-        }
-
-        for (var n = 0; n < FIELD_WIDTH; n++) {
-            % If a column is given only check this one column
-            if (srcN > -1 && n != srcN) {
-                continue;
-            }
-
-            % Select the pieces with the currentTurn color
-            if (currentTurn == complField[m][n][COLOR] && piece == complField[m][n][PIECE]) {
-
-                lastSelection = [m, n];
-                % Mark all cells that are accessible
-                highlightValidMoves(true);
-
-                if (validMove(tgtM, tgtN)) {
-                    % Disable highlight
-                    highlightValidMoves(false);
-                    lastSelection = [];
-                    return [m, n];
-                }
-
-                % Disable highlight
-                highlightValidMoves(false);
-            }
-        }
-    }
-    % Reset selection
-    lastSelection = [];
-    return [];
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1135,6 +918,263 @@ function promotePawn(sel) {
         showPromotionButtons(false);
         printInfoText("Pawn promoted to " + PIECE_SYMBOLS[QUEEN + sel] + ".");
     }
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Process positional input %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+/**
+ * Process all moves that are given via the moves-field.
+ * These moves should be of PGN format.
+ * Multiple PGN examples where used to validate the correctness of
+ * the function. These can be found here:
+ * https://en.wikipedia.org/wiki/Portable_Game_Notation
+ */
+function processMoves() {
+    this.getField("info").setFocus();
+    % Prevent applying input to a finished game
+    if (checkmate || stalemate) {
+        printInfoText("Game over, please restart the game!");
+        return;
+    }
+
+    % Get the input string
+    var input = this.getField("moves").value;
+    % Remove comments from input
+    input = input.replace(/ *\{[^\}]*\}*/g, "");
+    % Split the turns using the turn-number
+    var allTurns = input.split(/\s*\d+\.\s*|,\s*/);
+
+    % Remove empty string when splitting numbered list
+    if (input.indexOf('.') > -1) {
+        allTurns.splice(0, 1);
+    }
+
+    % Add both parts of a turn to the moves array
+    movesToProcess = [];
+    for (var idx = 0; idx < allTurns.length; idx++) {
+        var parts = allTurns[idx].split(" ");
+        for (var j = 0; j < parts.length; j++) {
+            movesToProcess.push(parts[j]);
+        }
+    }
+
+    printInfoText("Start interval and move processing.");
+    playInterval = app.setInterval("processNextMove();", PLAYBACK_SPEED);
+}
+
+/**
+ * Processes the move at position 0 from the movesToProcess array until the array is empty.
+ * Each move has two states, first being shown on the field and then being executed.
+ * The the 0 element of the array is removed after the processing finishes.
+ */
+function processNextMove() {
+    if (movesToProcess.length == 0) {
+        printInfoText("All moves were processed.");
+        app.clearInterval(playInterval);
+        return;
+    }
+
+    % Test whether the move should be applied or shown
+    if (processBool) {
+        % Convert the move to a src and tgt position and save it for the next step
+        conversion = convert(movesToProcess[0]);
+        % If the conversion does not have a src and a tgt position, either
+        % the game is over or the move is faulty
+        if (conversion.length != 2) {
+            if (conversion.length == 1) {
+                printInfoText("Game over, " + conversion[0] + " won.");
+            } else {
+                printInfoText("Could not find a valid move for " + movesToProcess[0] + ".");
+            }
+            app.clearInterval(playInterval);
+            return;
+        }
+        move(conversion[0][M], conversion[0][N]);
+    } else {
+        move(conversion[1][M], conversion[1][N]);
+        % Test for promotion
+        if (promotionPos.length > 0) {
+            promotePawn(promotionIndex);
+        }
+        % Remove the processed move
+        movesToProcess.splice(0, 1);
+    }
+
+    printInfoText("Moving: " + conversion[0] + " to " + conversion[1] +
+        ". Remaining: " + movesToProcess);
+    processBool = !processBool;
+}
+
+/**
+ * This function is able to parse PGN notation.
+ * These inputs can be processed:
+ * - castles O-O and O-O-O
+ * - pawn movements -> cb5
+ * - other piece movements -> Nbd7
+ * - pawn promotion -> e8=Q#
+ * - result info -> 1/2-1/2, 0-1, 1-0
+ * These move information are ignored by removing the symbols:
+ * - captures -> x
+ * - check -> +
+ * - checkmate -> #
+ * - moveinfo -> ! and ?
+ *
+ * Using the PGN notation the input is converted into the local coordinate system
+ * with m and n coordinates for the target and the source.
+ *
+ * @param {Array} curTurn A single turn of the input that shall be converted.
+ * @return {Array} The converted position in form of src and tgt position.
+ */
+function convert(curTurn) {
+    var result = [];
+    var piece = "P";
+
+    var tgtM = -1;
+    var tgtN = -1;
+    var srcM = -1;
+    var srcN = -1;
+
+    % Delete all additional symbols that are not necessary to move the piece
+    var turnClean = curTurn.replace(/x|\+|#|!|\?/g, "");
+
+    % Game over, white won
+    if (turnClean == "1-0") {
+        checkmate = true;
+        return ["White"];
+    }
+    % Game over, black won
+    else if (turnClean == "0-1") {
+        checkmate = true;
+        return ["Black"];
+    }
+    % Game over, noone won
+    else if (turnClean == "1\/2-1\/2") {
+        stalemate = true;
+        return ["No one"];
+    }
+    % King side castles
+    else if (turnClean == "O-O") {
+        tgtM = currentTurn == WHITE ? 7 : 0;
+        tgtN = 6;
+        piece = "K";
+    }
+    % Queen side castles
+    else if (turnClean == "O-O-O") {
+        tgtM = currentTurn == WHITE ? 7 : 0;
+        tgtN = 2;
+        piece = "K";
+    } else {
+        var characters = turnClean.split("");
+        % Get the piece that should be moved
+        if (characters.length == 2) {
+            % piece = "P";
+        } else if (characters[0].charCodeAt(0) - 90 > 0) {
+            % piece = "P";
+            % Pawn promotion
+            if (characters[characters.length - 2] == "=") {
+                var promotionChar = characters[characters.length - 1];
+                if (promotionChar == "Q") {
+                    promotionIndex = 0;
+                } else if (promotionChar == "B") {
+                    promotionIndex = 1;
+                } else if (promotionChar == "N") {
+                    promotionIndex = 2;
+                } else {
+                    promotionIndex = 3;
+                }
+                characters.splice(characters.length - 2);
+            }
+        } else {
+            piece = characters[0];
+            characters.splice(0, 1);
+        }
+
+        % Get the target position
+        var tgtM = 8 - parseInt(characters[characters.length - 1], 10);
+        var tgtN = characters[characters.length - 2].charCodeAt(0) - 97;
+
+        % Check if there are additional movement information
+        for (var charPos = 0; charPos <= characters.length - 3; charPos++) {
+            var column = characters[charPos].charCodeAt(0) - 97;
+            if (column >= 0) {
+                srcN = column;
+            } else {
+                srcM = 8 - parseInt(characters[charPos], 10);
+            }
+        }
+    }
+
+    % Only allow letters a-h and only numbers from 1-8
+    if (tgtM < 0 || tgtN < 0 || tgtM >= FIELD_HEIGHT || tgtN >= FIELD_WIDTH ||
+        srcM >= FIELD_HEIGHT || srcN >= FIELD_WIDTH
+    ) {
+        return [];
+    }
+
+    % After validating the target position the source position must be obtained
+    var srcPos = getSourcePosition(tgtM, tgtN, srcM, srcN, piece);
+    if (srcPos.length != 2) {
+        return [];
+    } else {
+        % Return the source and target positions
+        result.push(srcPos);
+        result.push([tgtM, tgtN]);
+    }
+
+    return result;
+}
+
+/**
+ * Iterates all cells and checks whether the cell-piece matches the piece that is given
+ * and has the same color as the currentTurn.
+ * Each time a valid piece is found its moves are highlighted and validMove is called to
+ * validate if the move is possible. If the move is possible the piece position is returned
+ * to be used as source position. All highlights are disabled after each test.
+ * Should it not be possible to find a matching piece an empty array is returned.
+ * Additionally the source row or column can be specified to limit the search radius.
+ *
+ * @param {Number} tgtM The target row index.
+ * @param {Number} tgtN The target column index.
+ * @param {Number} srcM The source row index, use 0 is no row is known.
+ * @param {Number} srcN The source column index, use 0 is no row is known.
+ * @param {String} piece The search piece character.
+ */
+function getSourcePosition(tgtM, tgtN, srcM, srcN, piece) {
+    for (var m = 0; m < FIELD_HEIGHT; m++) {
+        % If a row is given only check this one row
+        if (srcM > -1 && m != srcM) {
+            continue;
+        }
+
+        for (var n = 0; n < FIELD_WIDTH; n++) {
+            % If a column is given only check this one column
+            if (srcN > -1 && n != srcN) {
+                continue;
+            }
+
+            % Select the pieces with the currentTurn color
+            if (currentTurn == complField[m][n][COLOR] && piece == complField[m][n][PIECE]) {
+
+                lastSelection = [m, n];
+                % Mark all cells that are accessible
+                highlightValidMoves(true);
+
+                if (validMove(tgtM, tgtN)) {
+                    % Disable highlight
+                    highlightValidMoves(false);
+                    lastSelection = [];
+                    return [m, n];
+                }
+
+                % Disable highlight
+                highlightValidMoves(false);
+            }
+        }
+    }
+    % Reset selection
+    lastSelection = [];
+    return [];
 }
 
 %%%%%%%%%%%%%%%%%%%%%
